# tamaku

./: .gitignore  README.md  pyproject.toml
configs/: provider_config.json
tamaku/: BaseConfigLoader.py  BaseTaskCreator.py  BaseVersionFetcher.py  DataClasses.py  main.py
tamaku/tf/: TfGetProviders.py  TfInstalledVersionsChecker.py  TfProviderConfigLoader.py  TfProviderVersionFetcher.py  TfRunProviderDownload.py  TfTaskCreator.py  TfTemplateGenerator.py
tamaku/utils/: CommandExecutor.py  Logger.py  Utils.py  VersionFilter.py
tests/tf/: test_tf_get_providers.py  test_tf_installed_versions_checker.py  test_tf_installed_versions_checker_multiple.py  test_tf_provider_config_loader.py  test_tf_provider_version_fetcher.py  test_tf_run_provider_download.py  test_tf_task_creator.py  test_tf_task_creator.py_  test_tf_template_generator.py
tests/utils/: test_is_semantic_version.py  test_logger.py  test_stream_functions.py  test_version_filter.py  test_write_json_file.py  test_write_text_file.py
